fix debug info container causing scrollbars

--- a/assets/styles/game.css
+++ b/assets/styles/game.css
@@ -1,6 +1,7 @@
 body
 {
     margin: 0;
+    padding: 0;
     background: navy;
     font-family: Tahoma;
 }
@@ -17,6 +18,9 @@ body
 
     width: 100vw;
     height: 100vh;
+
+    top: 0;
+    left: 0;
 
     overflow-x: hidden;
     overflow-y: hidden;
